# OpenGLFun

./: .gitignore  App.cpp  App.h  CMakeLists.txt  Mesh.hpp  ObjParser.cpp  ObjParser.hpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  constants.h  main.cpp  myFirstShader.shader  slib.cpp  slib.h  smath.cpp  smath.hpp
resources/: fragment.shader  vertex.shader
